objects/ASI_CRM_Price_And_Discount_Detail__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Buy_X__c</fullName>
        <formula>ASI_CRM_Promotion_Code__r.ASI_CRM_Buy_X__c</formula>
        <label>Buy X</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Gross_Sales_Impact_RollUp__c</fullName>
        <label>Gross Sales Impact (RollUp)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Item_Group_Code__c</fullName>
        <formula>IF( CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_CN&quot;), ASI_CRM_Item_Group_Description__r.ASI_MFM_Item_Group_Code__c, &quot;&quot;)</formula>
        <label>Item Group Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_vs_Current_T1_Non_VAT__c</fullName>
        <formula>IF(( ASI_CRM_Price_And_Discount__r.RecordType.DeveloperName = &quot;ASI_CRM_CN_Customer_Price_and_Discount_Request&quot; || ASI_CRM_Price_And_Discount__r.RecordType.DeveloperName = &quot;ASI_CRM_CN_Customer_Price_and_Discount_Request_RO&quot; ), ASI_CRM_vs_Current_T1_with_VAT__c/1.17, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>vs Current T1 (Non VAT)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Current_T1_Price_BT_with_VAT__c</fullName>
        <label>Current T1 Price - BT (with VAT)</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Get_Y__c</fullName>
        <formula>ASI_CRM_Promotion_Code__r.ASI_CRM_Get_Y__c</formula>
        <label>Get Y</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Gross_Sales_Impact__c</fullName>
        <formula>ABS( IF(
(( ASI_CRM_Price_And_Discount__r.RecordType.DeveloperName = &quot;ASI_CRM_CN_Customer_Price_and_Discount_Request&quot; || ASI_CRM_Price_And_Discount__r.RecordType.DeveloperName = &quot;ASI_CRM_CN_Customer_Price_and_Discount_Request_RO&quot;))
, IF( NOT(ISBLANK(ASI_CRM_Promotion_Code__c ) ) &amp;&amp;  ASI_CRM_Buy_X__c &gt; 0 &amp;&amp;  ASI_CRM_Get_Y__c &gt; 0, IF( ASI_CRM_Total_Estimated_Vol_BT__c * ( (ASI_CRM_New_Price_BT_non_VAT__c * ( ASI_CRM_Buy_X__c/ (ASI_CRM_Buy_X__c + ASI_CRM_Get_Y__c ) ) ) - (ASI_CRM_Current_T1_Price_BT_with_VAT__c/1.17)) &lt; 0
, ASI_CRM_Total_Estimated_Vol_BT__c * ( (ASI_CRM_New_Price_BT_non_VAT__c * ( ASI_CRM_Buy_X__c/(ASI_CRM_Buy_X__c + ASI_CRM_Get_Y__c ) ) ) - (ASI_CRM_Current_T1_Price_BT_with_VAT__c/1.17)), 0)
, IF( ( ASI_CRM_New_Price_BT_non_VAT__c &lt; (ASI_CRM_Current_T1_Price_BT_with_VAT__c/1.17) )
, ASI_CRM_Total_Estimated_Vol_BT__c * ( (ASI_CRM_New_Price_BT_non_VAT__c ) - (ASI_CRM_Current_T1_Price_BT_with_VAT__c/1.17)), 0)), 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Sales Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Group_Description__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>Price And Discount Details</relationshipLabel>
        <relationshipName>Price_And_Discount_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_New_Price_BT_non_VAT__c</fullName>
        <formula>ASI_CRM_New_Price_BT_with_VAT__c  / 1.16</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Price - BT (non-VAT)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_New_Price_BT_with_VAT__c</fullName>
        <label>New Price - BT (with VAT)</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_New_Price_CA_non_VAT__c</fullName>
        <formula>IF ( ASI_CRM_New_Price_BT_non_VAT__c * ASI_CRM_Item_Group_Description__r.ASI_CRM_CN_Pack_Value__c &gt;= 0, ASI_CRM_New_Price_BT_non_VAT__c * ASI_CRM_Item_Group_Description__r.ASI_CRM_CN_Pack_Value__c, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Price - CA (non-VAT)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_New_Price_CA_with_VAT__c</fullName>
        <formula>IF ( ASI_CRM_New_Price_BT_with_VAT__c *  ASI_CRM_Item_Group_Description__r.ASI_CRM_CN_Pack_Value__c  &gt;= 0, ASI_CRM_New_Price_BT_with_VAT__c *  ASI_CRM_Item_Group_Description__r.ASI_CRM_CN_Pack_Value__c, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Price - CA (with VAT)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Price_And_Discount__c</fullName>
        <label>Price And Discount</label>
        <referenceTo>ASI_CRM_Price_And_Discount__c</referenceTo>
        <relationshipLabel>Price And Discount Details</relationshipLabel>
        <relationshipName>Price_And_Discount_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion Code</label>
        <referenceTo>ASI_CRM_Promotion_Master__c</referenceTo>
        <relationshipLabel>Price And Discount Details</relationshipLabel>
        <relationshipName>Price_And_Discount_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Estimated_Vol_BT__c</fullName>
        <label>Total Estimated Vol - BT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_vs_Current_T1_with_VAT_Percent__c</fullName>
        <formula>IF(ASI_CRM_Current_T1_Price_BT_with_VAT__c &gt; 0, IF( NOT(ISBLANK( ASI_CRM_Promotion_Code__c )) &amp;&amp; NOT(ISBLANK(ASI_CRM_Buy_X__c)) &amp;&amp;  NOT(ISBLANK(ASI_CRM_Get_Y__c)), ((ASI_CRM_New_Price_BT_with_VAT__c * (ASI_CRM_Buy_X__c/(ASI_CRM_Buy_X__c+ASI_CRM_Get_Y__c)))/ASI_CRM_Current_T1_Price_BT_with_VAT__c) - 1, ( ( ASI_CRM_New_Price_BT_with_VAT__c / ASI_CRM_Current_T1_Price_BT_with_VAT__c ) - 1 )), 0)</formula>
        <label>vs Current T1 (with VAT) (%)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_vs_Current_T1_with_VAT__c</fullName>
        <formula>IF(( ASI_CRM_Price_And_Discount__r.RecordType.DeveloperName = &quot;ASI_CRM_CN_Customer_Price_and_Discount_Request&quot; || ASI_CRM_Price_And_Discount__r.RecordType.DeveloperName = &quot;ASI_CRM_CN_Customer_Price_and_Discount_Request_RO&quot; )
, IF( NOT(ISBLANK( ASI_CRM_Promotion_Code__c )) &amp;&amp; ASI_CRM_Buy_X__c &gt; 0 &amp;&amp; ASI_CRM_Get_Y__c &gt; 0 &amp;&amp; NOT(ISBLANK(ASI_CRM_Current_T1_Price_BT_with_VAT__c))
, ((ASI_CRM_New_Price_BT_with_VAT__c * (ASI_CRM_Buy_X__c/(ASI_CRM_Buy_X__c+ASI_CRM_Get_Y__c))) - ASI_CRM_Current_T1_Price_BT_with_VAT__c)
, ( ( ASI_CRM_New_Price_BT_with_VAT__c - ASI_CRM_Current_T1_Price_BT_with_VAT__c )))
, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>vs Current T1 (with VAT)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>Price And Discount Detail</label>
    <nameField>
        <displayFormat>PDD-{00000000}</displayFormat>
        <label>Price And Discount Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price And Discount Details</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Price_And_Discount_Detail</fullName>
        <active>true</active>
        <label>CN Price And Discount Detail</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_CN_CheckTotalEst</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(ASI_CRM_New_Price_BT_with_VAT__c)) &amp;&amp; ISBLANK( ASI_CRM_Total_Estimated_Vol_BT__c ) &amp;&amp;   ASI_CRM_Price_And_Discount__r.RecordType.DeveloperName == &apos;ASI_CRM_CN_Customer_Price_and_Discount_Request&apos;</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Total_Estimated_Vol_BT__c</errorDisplayField>
        <errorMessage>Total Estimated Vol - BT is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_of_JDE_Code</fullName>
        <active>false</active>
        <errorConditionFormula>CONTAINS(ASI_CRM_Price_And_Discount__r.RecordType.DeveloperName, &apos;ASI_CRM_CN_Customer_Price_and_Discount_Request&apos;) &amp;&amp; ( ( NOT( ASI_CRM_Price_And_Discount__r.ASI_CRM_RTD__c ) &amp;&amp; ISBLANK( ASI_CRM_Price_And_Discount__r.ASI_CRM_Customer__r.ASI_CRM_CN_JDE_Code__c ) ) || ( ASI_CRM_Price_And_Discount__r.ASI_CRM_RTD__c &amp;&amp; ISBLANK( ASI_CRM_Price_And_Discount__r.ASI_CRM_Customer__r.ASI_CRM_CN_JDE_Code_RTD__c ) ) )</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>Customer JDE Code can not be NULL</errorMessage>
    </validationRules>
</CustomObject>